--- a/RgpWeb/Views/Home/Index.cshtml
+++ b/RgpWeb/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="text-center" style="padding-top: 60px">
     <h1 class="display-4 text-dark">SVEICINĀTI</h1>
     <a href="@Url.Action("Index", "Owner")">
-        <h2> Zemes īpašnieku datu bāzē</h2>
+        <h2> Zemes īpašnieku datu bāze</h2>
     </a>
     
 </div>
