--- a/RgpWeb/Views/Owner/Index.cshtml
+++ b/RgpWeb/Views/Owner/Index.cshtml
@@ -33,6 +33,9 @@
         <th>
             @Html.DisplayNameFor(model => model.LandArea)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PropertyCount)
+        </th>
         <th></th>
         <th></th>
     </tr>
@@ -53,6 +56,9 @@
             <td width="15%">
                 @Html.DisplayFor(m => obj.LandArea)
             </td>
+                <td width="15%">
+                        @Html.DisplayFor(m => obj.PropertyCount)
+                </td>
             <td width="15%">
                 <div class="w-75 btn-group" role="group">
                     <a href="@Url.Action("Edit", "Owner", new {id = obj.Id})"
